fix navbar too wide

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -309,6 +309,10 @@ hr:after {
     }
     
   }
+  @media screen and (max-width:1400px) { 
+    width:40px!important;
+    font-size:12px!important
+  }
 }
 .active {
 
@@ -325,3 +329,4 @@ hr:after {
  
 
 }
+.admin-nav {}
